--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.3
+configparser==5.0.0
+crayons==0.4.0
 google-api-core==1.22.1
 google-api-python-client==1.11.0
 google-auth==1.21.0
@@ -23,3 +26,4 @@ selenium==3.141.0
 six==1.15.0
 uritemplate==3.0.1
 urllib3==1.25.10
+webdriver-manager==3.2.2
