retomando o projeto e atualizando

--- a/samples/configTest.json
+++ b/samples/configTest.json
@@ -5,12 +5,12 @@
     },
     "deck": {
     	"deck_name": "",
-    	"new_deck": false,
+    	"new_deck": false
     },
     "web_driver_user_settings": {
 		"browser": "chrome",
 		"web_driver_args": {
-			"timeout": 60
+			"keep_alive": false
 		},
 		"web_driver_options": {
 			"headless": true
